--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/boxicons.min.css">
     <link rel="stylesheet" href="style.css ">
     <title>rs_drawz</title>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
@@ -556,7 +556,7 @@
     </div>
   </div>
 </footer>
- 
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
  
 </body>
