--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/boxicons.min.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="./boxicons.min.css">
     <link rel="stylesheet" href="style.css ">
     <title>rs_drawz</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
@@ -125,7 +125,7 @@
   <section id="portfolio" class="row">
         <div class="col-lg-4 col-sm-6 feature d-flex">
           <div class="portfolio-item"> 
-            <img src="images/art/IMG_20220924_110105.jpg" alt="">
+            <img src="./IMG_20220924_110105.jpg" alt="">
             <div class="portfolio-overlay">
               <div>
                 <h3>Actress</h3>
@@ -136,7 +136,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 feature d-flex">
           <div class="portfolio-item"> 
-              <img src="images/art/IMG_20221114_191017.jpg" alt="">
+              <img src="./IMG_20221114_191017.jpg" alt="">
               <div class="portfolio-overlay">
                 <div>
                   <h3>Rolex</h3>
@@ -147,7 +147,7 @@
         </div>
           <div class="col-lg-4 col-sm-6 feature d-flex">
             <div class="portfolio-item"> 
-                <img src="images/art/rs_drawz_1671346216631277.jpg" alt="">
+                <img src="./rs_drawz_1671346216631277.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div>
                     <h3>actor</h3>
@@ -158,7 +158,7 @@
           </div>
             <div class="col-lg-4 col-sm-6 feature d-flex">
               <div class="portfolio-item"> 
-                  <img src="images/art/rs_drawz_167134623294059.jpg" alt="">
+                  <img src="./rs_drawz_167134623294059.jpg" alt="">
                   <div class="portfolio-overlay">
                     <div>
                       <h3>madan gowri</h3>
@@ -169,7 +169,7 @@
             </div>
               <div class="col-lg-4 col-sm-6 feature d-flex">
                 <div class="portfolio-item"> 
-                    <img src="images/art/rs_drawz_1671346526620947.jpg" alt="">
+                    <img src="./rs_drawz_1671346526620947.jpg" alt="">
                     <div class="portfolio-overlay">
                       <div>
                         <h3>ram with jannu</h3>
@@ -180,7 +180,7 @@
               </div>
               <div class="col-lg-4 col-sm-6 feature d-flex">
                 <div class="portfolio-item"> 
-                  <img src="images/art/rs_drawz_167134782527332.jpg" alt="">
+                  <img src="./rs_drawz_167134782527332.jpg" alt="">
                   <div class="portfolio-overlay">
                     <div>
                       <h3>Pradeep</h3>
@@ -191,7 +191,7 @@
               </div>
               <div class="col-lg-4 col-sm-6 feature d-flex">
                 <div class="portfolio-item"> 
-                  <img src="images/art/rs_drawz_1671347624634641.jpg" alt="">
+                  <img src="./rs_drawz_1671347624634641.jpg" alt="">
                   <div class="portfolio-overlay">
                     <div>
                       <h3>Yuvan</h3>
@@ -202,7 +202,7 @@
               </div>
               <div class="col-lg-4 col-sm-6 feature d-flex">
                 <div class="portfolio-item"> 
-                  <img src="images/art/rs_drawz_1671346914054972.jpg" alt="">
+                  <img src="./rs_drawz_1671346914054972.jpg" alt="">
                   <div class="portfolio-overlay">
                     <div>
                       <h3>Family art</h3>
@@ -213,7 +213,7 @@
               </div>
               <div class="col-lg-4 col-sm-6 feature d-flex">
                 <div class="portfolio-item"> 
-                  <img src="images/art/rs_drawz_1671346802098623.jpg" alt="">
+                  <img src="./rs_drawz_1671346802098623.jpg" alt="">
                   <div class="portfolio-overlay">
                     <div>
                       <h3>Maddy</h3>
@@ -295,7 +295,7 @@
   <section id="team" class="row g-0 py-0 9,">
     <div class="col-lg-3 col-sm-6 team-member">
         <div class="team-member-img">
-          <img src="images/bio/20230310_180937.jpg" alt="">
+          <img src="./20230310_180937.jpg" alt="">
           <div class="social-icons">
             <a href="#"><i class="bx bxl-facebook"></i></a>
             <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -312,7 +312,7 @@
     </div>
     <div class="col-lg-3 col-sm-6 team-member even">
       <div class="team-member-img">
-        <img src="images/bio/20230310_180626.jpg" alt="">
+        <img src="./20230310_180626.jpg" alt="">
         <div class="social-icons">
           <a href="#"><i class="bx bxl-facebook"></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -329,7 +329,7 @@
   </div>
   <div class="col-lg-3 col-sm-6 team-member">
     <div class="team-member-img">
-      <img src="images/bio/20230310_180925.jpg" alt="">
+      <img src="./20230310_180925.jpg" alt="">
       <div class="social-icons">
         <a href="#"><i class="bx bxl-facebook"></i></a>
         <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -346,7 +346,7 @@
 </div>
 <div class="col-lg-3 col-sm-6 team-member even">
   <div class="team-member-img">
-    <img src=".//images/bio/20230310_180935.jpg" alt="">
+    <img src="./20230310_180935.jpg" alt="">
     <div class="social-icons">
       <a href="#"><i class="bx bxl-facebook"></i></a>
       <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -370,7 +370,7 @@
         <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
-              <img src="./images/bio/DSC00820.jpg" alt="">
+              <img src="./DSC00820.jpg" alt="">
             </button>
           </li>
           <li class="nav-item" role="presentation">
@@ -438,22 +438,22 @@
   <div class="container">
     <div class="row gy-4">
       <div class=".col-lg-2 col-md-3 col-6">
-        <img src="./images/logos/download (1).png" alt="">
+        <img src="./download (1).png" alt="">
       </div>
       <div class=".col-lg-2 col-md-3 col-6">
-        <img src="./images/logos/hi.png" alt="">
+        <img src="./hi.png" alt="">
       </div>
       <div class=".col-lg-2 col-md-3 col-6">
-        <img src="./images/logos/hi.png" alt="">
+        <img src="./hi.png" alt="">
       </div>
       <div class=".col-lg-2 col-md-3 col-6">
-        <img src="./images/logos/hi.png" alt="">
+        <img src="./hi.png" alt="">
       </div>
       <div class=".col-lg-2 col-md-3 col-6">
-        <img src="./images/logos/hi.png" alt="">
+        <img src="./hi.png" alt="">
       </div>
       <div class=".col-lg-2 col-md-3 col-6">
-        <img src="./images/logos/hi.png" alt="">
+        <img src="./hi.png" alt="">
       </div>
     </div>
   </div>
@@ -464,7 +464,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <img src="./images/art/rs_drawz_1671346914054972.jpg" alt="">
+        <img src="./rs_drawz_1671346914054972.jpg" alt="">
       </div>
       <div class="col-lg-6 offset-lg-1">
         <form>
@@ -556,8 +556,8 @@
     </div>
   </div>
 </footer>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
+<!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
+  <script src="./bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
